@@ -69,6 +69,7 @@ $(document).ready(function(){
 <li><a href="qunit-do-keyutil-keyid.html">qunit-do-keyutil-keyid.html</a></li>
 <li><a href="qunit-do-package-jwths.html">qunit-do-package-jwths.html</a></li>
 <li><a href="qunit-do-package-rsa.html">qunit-do-package-rsa.html</a></li>
+<li><a href="qunit-do-rsagenkeylen.html">qunit-do-rsagenkeylen.html</a></li>
 <li><a href="qunit-do-rsapem.html">qunit-do-rsapem.html</a></li>
 <li><a href="qunit-do-rsasign-pss.html">qunit-do-rsasign-pss.html</a></li>
 <li><a href="qunit-do-rsasign.html">qunit-do-rsasign.html</a></li>
