@@ -494,6 +494,5 @@ equal(x.verifySignature(pubkey), false, "false");
 </p>
 
 </body>
-<center><p>&copy; 2010-2017 Kenji Urushima</p></center>
 </html>
 
